# rusty-snakeskin

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
clibrary/: .gitignore
docs/: SnakeSkin Architecture.graffle
mypy/: setup.py
mypy/mypy/: __init__.py  myscript.py  startme.py
sharedmodule/: .gitignore  Cargo.toml  Makefile  build.rs  setup.py
sharedmodule/service_module/: __init__.py
sharedmodule/src/: lib.rs
sharedmodule/tests/: test_asyncio.py  test_setuptools_rust_starter.py  test_submodule.py
src/: main.rs
